<resources>
    <string name="app_name">My File Reader</string>
    <string name="check_button">CHECK</string>
    <string name="send_button">SEND</string>
    <string name="display">Message Content</string>
    <string name="sms_cost_label">Unit Cost of SMS</string>
    <string name="total_cost_of_sms">0</string>
    <string name="unit_cost_of_sms">4</string>
    <string name="Beneficialries_List">https://www.dropbox.com/s/7rxxn2vt9eceqbs/Upcoming%20Birthdays.txt?dl=0</string>

</resources>